# Project_django

./: .gitignore  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_detail.html
config/: settings.py  urls.py
main/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
main/management/commands/: sending_mail.py
main/migrations/: 0001_initial.py
main/templates/main/: customer_confirm_delete.html  customer_detail.html  customer_form.html  customer_list.html  distribution_delete.html  distribution_detail.html  distribution_form.html  distribution_list.html  distribution_update.html  distributiontry_list.html  home.html
main/templates/main/includes/: main_menu.html
user/: admin.py  forms.py  models.py  urls.py  views.py
user/management/commands/: csu.py
user/migrations/: 0001_initial.py
user/templates/user/: login.html  register.html  user_form.html  user_list.html  user_password_message.html  user_password_reset.html  user_update.html
