[tool.poetry]
name = "pythonproject10"
version = "0.1.0"
description = ""
authors = ["Nastya Foxe <Kukusiki2204@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
psycopg2 = "^2.9.9"
apscheduler = "^3.10.4"
django-apscheduler = "^0.6.2"
pillow = "^10.3.0"
python-dotenv = "^1.0.1"
redis = "^5.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
